--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,30 @@
 <html>
   <head lang="en">
     <base href="/">
+
     <title>Laboratorio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link id="favicon" rel="shortcut icon" href="favicon.png" type="image/png"/>
 
-    <link href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="node_modules/animate.css/animate.min.css" rel="stylesheet">
+    <link href="../node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../node_modules/animate.css/animate.min.css" rel="stylesheet">
 
-    <link id="loadBefore" href="app/assets/css/style.css" rel="stylesheet">
-    <link href="app/assets/css/fullcalendar/fullcalendar.css" rel="stylesheet">
+    <link id="loadBefore" href="css/style.css" rel="stylesheet">
+    <link href="css/fullcalendar/fullcalendar.css" rel="stylesheet">
 
     <!-- Polyfill(s) for older browsers -->
-    <script src="node_modules/core-js/client/shim.min.js"></script>
+    <script src="../node_modules/core-js/client/shim.min.js"></script>
 
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="../node_modules/zone.js/dist/zone.js"></script>
+    <script src="../node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="../node_modules/systemjs/dist/system.src.js"></script>
 
     <!-- Configure SystemJS -->
-    <script src="systemjs.config.js"></script>
+    <script src="js/systemjs.config.js"></script>
     <script>
-        System.import('app').catch(
+        System.import('../app').catch(
             function (err) {
                 console.error(err);
             }
@@ -49,14 +50,14 @@
 
   </body>
 <script src="js/bundle.min.js"></script>
-<script src="app/assets/js/fullcalendar/moment.min.js"></script>
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="node_modules/pace-progress/pace.min.js"></script>
-<script src="node_modules/metismenu/dist/metisMenu.min.js"></script>
-<script src="node_modules/jquery-slimscroll/jquery.slimscroll.min.js"></script>
-<script src="app/assets/js/inspinia.js"></script>
-<script src="app/assets/js/fullcalendar/fullcalendar.min.js"></script>
+<script src="js/fullcalendar/moment.min.js"></script>
+<script src="../node_modules/jquery/dist/jquery.min.js"></script>
+<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../node_modules/pace-progress/pace.min.js"></script>
+<script src="../node_modules/metismenu/dist/metisMenu.min.js"></script>
+<script src="../node_modules/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+<script src="js/inspinia.js"></script>
+<script src="js/fullcalendar/fullcalendar.min.js"></script>
 </html>
 <!DOCTYPE html>
 <html>
